Added gmap api key

--- a/dev/app/contact/view.html
+++ b/dev/app/contact/view.html
@@ -41,9 +41,10 @@
     </div>
 </div>
 <div class="row">
-    <div map-lazy-load="https://maps.google.com/maps/api/js">
+    <div map-lazy-load="https://maps.google.com/maps/api/js?key=AIzaSyDG3Q0seg9DxC0dyuc9jre9Ij6NWyazh4Q">
         <ng-map style="height: 280px" scrollwheel="false" center="34 rue montesquieu, Lyon, France" zoom="12" zoom-control="true" overview-map-control="false" map-type-control="false" street-view-control="false">
             <marker position="45.7529652,4.8397048" title=""></marker>
         </ng-map>
+
     </div>
 </div>
