--- a/dev/app/portfolio/view.html
+++ b/dev/app/portfolio/view.html
@@ -1,21 +1,23 @@
 
-<div class="row bg-white">
-    <div class="col-lg-12 section">
-        <div class="section-header">
+<div class="row ">
+    <div class="section">
+        <div class="section-header" style="background-color: #fff;">
             <h3>Portfolio</h3>
         </div>
-        <div class="row row-no-padding">
-            <div class="col-lg-3 portfolio-item">
-                PilotPartner'
+        <div class="row row-no-padding" style="border-left: 30px solid #fff; border-right: 30px solid #fff; border-bottom: 100px solid #fff">
+            <div class="col-lg-3 portfolio-item" ng-repeat="project in projects">
+                <div class="img-container" ng-mouseenter="project.hover = true" ng-mouseleave="project.hover = false" >
+                    <div class="valign" >
+                        <img style="width: 100%; padding: {{project.padding}}px;" ng-src="{{project.imagePath + (project.hover ? '/logo.png' : '/logo_dark.png')}}" alt="">'
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-3 portfolio-item">
-                PilotPartner' Admin
-            </div>
-            <div class="col-lg-3 portfolio-item">
-                Guilmaut
-            </div>
-            <div class="col-lg-3 portfolio-item">
-                Guilmaut Admin
+            <div class="col-lg-3 portfolio-item" ng-repeat="project in projects">
+                <div class="img-container" ng-mouseenter="project.hover = true" ng-mouseleave="project.hover = false" >
+                    <div class="valign" >
+                        <img style="width: 100%; padding: {{project.padding}}px;" ng-src="{{project.imagePath + (project.hover ? '/logo.png' : '/logo_dark.png')}}" alt="">'
+                    </div>
+                </div>
             </div>
         </div>
     </div>
