--- a/dev/app/contact/view.html
+++ b/dev/app/contact/view.html
@@ -1,12 +1,13 @@
-
-<div class="row bg-grey contact">
+<div class="row bg-white contact">
     <div class="col-lg-12 section">
-        <div class="section-header">
-            <h3>Contactez-moi</h3>
+        <div class="section-header" >
+            <span class="title title-bold" >Contactez</span>
+            <span class="title title-light">Moi</span>
+            <div class="horizontal-bar"></div>
         </div>
         <div class="row" style="margin-bottom: 40px;">
-            <div class="col-lg-3 col-lg-offset-3">
-                <form>
+            <div class="col-md-4 col-md-offset-2 col-lg-3 col-lg-offset-3 col-sm-offset-1 col-sm-10">
+                <form style="">
                     <div class="form-group">
                         <input type="email" class="form-control" placeholder="Email">
                     </div>
@@ -16,21 +17,22 @@
                     <button type="submit" class="btn btn-default">Envoyer</button>
                 </form>
             </div>
-            <div class="col-lg-3">
-                <ul class="social">
-                    <li ng-repeat="socialItem in socialItems">
+            <div class="col-md-4 col-lg-3 col-sm-offset-1 col-sm-10">
+                <div class="row social">
+                    <div class="col-md-12 col-xs-12 col-sm-6" ng-repeat="socialItem in socialItems">
                         <a href="{{socialItem.link}}">
                             <i class="fa {{socialItem.icon}}" aria-hidden="true"></i>{{socialItem.label}}
                         </a>
-                    </li>
-                </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
 <div class="row">
     <div map-lazy-load="https://maps.google.com/maps/api/js?key=AIzaSyDG3Q0seg9DxC0dyuc9jre9Ij6NWyazh4Q">
-        <ng-map style="height: 280px" scrollwheel="false" center="34 rue montesquieu, Lyon, France" zoom="12" zoom-control="true" overview-map-control="false" map-type-control="false" street-view-control="false">
+        <ng-map style="height: 280px" scrollwheel="false" center="34 rue montesquieu, Lyon, France" zoom="12"
+                zoom-control="true" overview-map-control="false" map-type-control="false" street-view-control="false">
             <marker position="45.7529652,4.8397048" title=""></marker>
         </ng-map>
 
