Added services item

--- a/dev/app/footer/view.html
+++ b/dev/app/footer/view.html
@@ -3,6 +3,8 @@
     <div class="col-lg-8 col-lg-offset-3">
         <a class="" du-smooth-scroll="portfolio" du-scrollspy="portfolio">Portfolio</a>
         <span class="separator">|</span>
+        <a class="" du-smooth-scroll="info" du-scrollspy="info">Services</a>
+        <span class="separator">|</span>
         <a class="">CV</a>
         <span class="separator">|</span>
         <a class="" du-smooth-scroll="contact" du-scrollspy="contact">Contact</a>
