--- a/dev/app/footer/view.html
+++ b/dev/app/footer/view.html
@@ -1,6 +1,8 @@
 
 <div class="row footer">
     <div class="col-lg-8 col-lg-offset-3">
+        <a class="" du-smooth-scroll="header" du-scrollspy="header">Top</a>
+        <span class="separator">|</span>
         <a class="" du-smooth-scroll="portfolio" du-scrollspy="portfolio">Portfolio</a>
         <span class="separator">|</span>
         <a class="" du-smooth-scroll="info" du-scrollspy="info">Services</a>
