Removed inline styles

--- a/dev/app/main/view.html
+++ b/dev/app/main/view.html
@@ -1,8 +1,10 @@
 
+<menu></menu>
+
 <div id="header" class="row main-container">
-    <div class="col-lg-12 header">
+    <div class="col-lg-10 col-lg-offset-2 col-xs-offset-1 header">
         <div class="valign header-text">
-            <div style="margin-bottom: 100px;">
+            <div class="header-container">
                 <img class="photo" src="/images/identite_square_thumb.png" alt="Photo of Pierre-Nicolas Mougel">
                 <h1>Pierre-Nicolas Mougel</h1>
                 <h2>Développeur Freelance</h2>
@@ -19,6 +21,7 @@
 </div>
 
 <portfolio id="portfolio"></portfolio>
+<info id="info"></info>
 <cv id="cv"></cv>
 <contact id="contact"></contact>
 <footer></footer>
