--- a/dev/app/portfolio/view.html
+++ b/dev/app/portfolio/view.html
@@ -1,23 +1,27 @@
-
-<div class="row ">
-    <div class="section">
-        <div class="section-header" style="background-color: #fff;">
-            <h3>Portfolio</h3>
-        </div>
-        <div class="row row-no-padding" style="border-left: 30px solid #fff; border-right: 30px solid #fff; border-bottom: 100px solid #fff">
-            <div class="col-lg-3 portfolio-item" ng-repeat="project in projects">
-                <div class="img-container" ng-mouseenter="project.hover = true" ng-mouseleave="project.hover = false" >
-                    <div class="valign" >
-                        <img style="width: 100%; padding: {{project.padding}}px;" ng-src="{{project.imagePath + (project.hover ? '/logo.png' : '/logo_dark.png')}}" alt="">'
-                    </div>
-                </div>
+<div class="portfolio bg-white">
+    <div class="row">
+        <div class="section">
+            <div class="section-header">
+                <span class="title title-bold">Port</span>
+                <span class="title title-light">folio</span>
+                <div class="horizontal-bar"></div>
             </div>
-            <div class="col-lg-3 portfolio-item" ng-repeat="project in projects">
-                <div class="img-container" ng-mouseenter="project.hover = true" ng-mouseleave="project.hover = false" >
-                    <div class="valign" >
-                        <img style="width: 100%; padding: {{project.padding}}px;" ng-src="{{project.imagePath + (project.hover ? '/logo.png' : '/logo_dark.png')}}" alt="">'
+        </div>
+    </div>
+    <div class="row bg-white" style="padding-bottom: 95px;">
+        <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2">
+            <div class="row projects-container">
+                <div class="col-lg-{{12 / nbColsLg}} col-md-{{12 / nbColsMd}} col-xs-{{12 / nbColsXs}} portfolio-item" ng-repeat="project in projects">
+                    <div ui-sref="project({{project.urlParams}})"
+                         class="img-container"
+                         ng-mouseenter="projectHover(project, true)"
+                         ng-mouseleave="projectHover(project, false)">
+                        <div class="valign">
+                            <img ng-src="{{project.imagePath + project.logo}}" alt="">
+                        </div>
                     </div>
                 </div>
+                <div class="filler" ng-class="fillClasses"></div>
             </div>
         </div>
     </div>
